複数の大学に対応できるよう修正

--- a/config.json
+++ b/config.json
@@ -1,7 +1,24 @@
 {
-    "1": { "start": "08:50", "end": "10:20" },
-    "2": { "start": "10:30", "end": "12:00" },
-    "3": { "start": "13:10", "end": "14:40" },
-    "4": { "start": "14:50", "end": "16:20" },
-    "5": { "start": "16:30", "end": "18:00" }
+    "tamabi": {
+        "name": "多摩美術大学",
+        "address": "東京都八王子市鑓水2-1723",
+        "periods": {
+            "1": { "start": "08:50", "end": "10:20" },
+            "2": { "start": "10:30", "end": "12:00" },
+            "3": { "start": "13:10", "end": "14:40" },
+            "4": { "start": "14:50", "end": "16:20" },
+            "5": { "start": "16:30", "end": "18:00" }
+        }
+    },
+    "tcu": {
+        "name": "東京都市大学",
+        "address": "神奈川県横浜市都筑区牛久保西3-3-1",
+        "periods": {
+            "1": { "start": "09:20", "end": "11:00" },
+            "2": { "start": "11:10", "end": "12:50" },
+            "3": { "start": "13:40", "end": "15:20" },
+            "4": { "start": "15:30", "end": "17:10" },
+            "5": { "start": "17:20", "end": "19:00" }
+        }
+    }
 }
